# commandman

./: LICENSE  MANIFEST.in  README.md  commandman.py  commandmanager.py  requirements.txt  setup.cfg  setup.py  tox.ini
commandman/: __init__.py  app.py  cli.py  commander.py  commandman.py  config.py  manager.py  managers.py  smart.py
data/configs/: example.cfg
data/requirements/: requirements-test.txt
requirements/: requirements-dev.txt  requirements-test.txt
