[metadata]
name = commandman
version = attr: commandman.__version__
author = A.A. Suvorov
author_email = smartlegiondev@gmail.com
description = Console utility for working with command packages. Storage, execution, autorun.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/smartlegionlab/commandman/
project_urls =
    Documentation = https://github.com/smartlegionlab/commandman/blob/master/README.md
    Release notes = https://github.com/smartlegionlab/commandman/releases
license = BSD 3-Clause License
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: End Users/Desktop
    Intended Audience :: System Administrators
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
keywords =
    commandpack
    commandoro
    commandman
    smartlegionlab
    command execution

[options]
python_requires = >=3.6
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    click ~= 8.0.1
    smartcliapp ~= 0.3.0
    commandex ~= 0.2.1

[options.entry_points]
console_scripts =
    commandman = commandman.app:cli

[bdist_rpm]
doc_files = docs extras LICENSE README.md

[coverage:run]
omit =
    venv/*
    .pytest_cache
    *__init__.py